Adding UI and spring cloud config with kakfa configs