@@ -11,8 +11,9 @@
 	<groupId>com.petstore</groupId>
 	<artifactId>store</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
-	<name>store</name>
+    <name>store</name>
 	<description/>
 	<url/>
 	<licenses>
@@ -21,7 +22,8 @@
 	<developers>
 		<developer/>
 	</developers>
-	<scm>
+
+    <scm>
 		<connection/>
 		<developerConnection/>
 		<tag/>
@@ -37,386 +39,10 @@
         <swagger-ui.version>5.17.14</swagger-ui.version>
 		<native.maven.plugin.version>1.1.11</native.maven.plugin.version>
 	</properties>
-	<dependencies>
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-docker-compose</artifactId>
-			<scope>runtime</scope>
-			<optional>true</optional>
-		</dependency>
-		<!-- Source: https://mvnrepository.com/artifact/org.postgresql/postgresql -->
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<optional>true</optional>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-webmvc</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-restclient</artifactId>
-		</dependency>
-        <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-commons</artifactId>
-        </dependency>
-          <!--SpringDoc dependencies -->
-        <dependency>
-            <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>${springdoc.version}</version>
-        </dependency>
-        <!-- @Nullable annotation -->
-        <dependency>
-            <groupId>com.google.code.findbugs</groupId>
-            <artifactId>jsr305</artifactId>
-            <version>3.0.2</version>
-        </dependency>
-        <!-- Bean Validation API support -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-validation</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-webmvc-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<!-- Source: https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-api</artifactId>
-			<scope>test</scope>
-		</dependency>
-
-		<!-- Mockito Core -->
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-core</artifactId>
-			<scope>test</scope>
-		</dependency>
-
-		<!-- Mockito JUnit 5 Extension -->
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-junit-jupiter</artifactId>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
-
-	<build>
-		<resources>
-			<resource>
-				<directory>src/main/resources</directory>
-				<filtering>false</filtering>
-			</resource>
-			<resource>
-				<directory>target/generated-sources/openapi/src/main/java</directory>
-				<filtering>false</filtering>
-			</resource>
-		</resources>
-		<plugins>
-			<!--<plugin>
-				<groupId>se.kth.castor</groupId>
-				<artifactId>depclean-maven-plugin</artifactId>
-				<version>2.2.0</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>depclean</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin> -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>default-compile</id>
-						<phase>compile</phase>
-						<goals>
-							<goal>compile</goal>
-						</goals>
-						<configuration>
-							<annotationProcessorPaths>
-								<path>
-									<groupId>org.projectlombok</groupId>
-									<artifactId>lombok</artifactId>
-								</path>
-								<path>
-									<groupId>org.springframework.boot</groupId>
-									<artifactId>spring-boot-configuration-processor</artifactId>
-								</path>
-							</annotationProcessorPaths>
-						</configuration>
-					</execution>
-					<execution>
-						<id>default-testCompile</id>
-						<phase>test-compile</phase>
-						<goals>
-							<goal>testCompile</goal>
-						</goals>
-						<configuration>
-							<annotationProcessorPaths>
-								<path>
-									<groupId>org.projectlombok</groupId>
-									<artifactId>lombok</artifactId>
-								</path>
-							</annotationProcessorPaths>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<mainClass>com.petstore.OpenApiGeneratorApplication</mainClass>
-				</configuration>
-			</plugin>
-			 <plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>build-helper-maven-plugin</artifactId>
-				<executions>
-				<execution>
-					<id>add-source</id>
-					<phase>generate-sources</phase>
-					<goals>
-					<goal>add-source</goal>
-					</goals>
-					<configuration>
-					<sources>
-						<source>target/generated-sources/openapi/src/main/java</source>
-					</sources>
-					</configuration>
-				</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.openapitools</groupId>
-				<artifactId>openapi-generator-maven-plugin</artifactId>
-				<version>7.25.0</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>generate</goal>
-						</goals>
-						<configuration>
-							<inputSpec>src/main/resources/petstore-OAS3.json</inputSpec>
-							<generatorName>spring</generatorName>
-							<enablePostProcessFile>true</enablePostProcessFile>
-							<templateDirectory>src/main/resources/templates</templateDirectory>
-							<typeMappings>integer=Long,int=Long</typeMappings>
-							<configOptions>
-								<appName>StoreApplication</appName>
-								<additionalModelTypeAnnotations>@org.springframework.aot.hint.annotation.Reflective</additionalModelTypeAnnotations>
-								<generateJsonIncludeAnnotations>false</generateJsonIncludeAnnotations>
-								<generateJsonSetterNullsAnnotations>false</generateJsonSetterNullsAnnotations>
-								<reactive>false</reactive>
-								<useSealed>true</useSealed>
-								<delegatePattern>true</delegatePattern>
-								<collectionType>list</collectionType>
-							 	<useSpringBoot4>true</useSpringBoot4>
-								<basePackage>com.petstore</basePackage>
-								<configPackage>com.petstore.configuration</configPackage>
-								<modelPackage>com.petstore.model</modelPackage>
-								<apiPackage>com.petstore.api</apiPackage>
-								<useOptional>true</useOptional>
-								<openApiNullable>false</openApiNullable>
-								<generateBuilders>true</generateBuilders>
-								<generateConstructorWithAllArgs>true</generateConstructorWithAllArgs>
-							</configOptions>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<executions>
-					<execution>
-						<goals>
-							<goal>properties</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-					<configuration>
-						<argLine>-XX:+EnableDynamicAgentLoading</argLine>
-						 <argLine>-javaagent:${org.mockito:mockito-core:jar} -Dnet.bytebuddy.experimental=true</argLine>
-					</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.cyclonedx</groupId>
-				<artifactId>cyclonedx-maven-plugin</artifactId>
-				<version>2.9.3</version> <!-- Use the latest stable version -->
-				<executions>
-					<execution>
-						<phase>package</phase> <!-- Generates the SBOM during the package phase -->
-						<goals>
-							<goal>makeAggregateBom</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<projectType>application</projectType>
-					<schemaVersion>1.6</schemaVersion>
-					<includeBomSerialNumber>true</includeBomSerialNumber>
-					<includeCompileScope>true</includeCompileScope>
-					<includeProvidedScope>true</includeProvidedScope>
-					<includeRuntimeScope>true</includeRuntimeScope>
-					<includeSystemScope>true</includeSystemScope>
-					<includeTestScope>false</includeTestScope>
-					<includeLicenseText>false</includeLicenseText>
-					<outputReactorProjects>true</outputReactorProjects>
-					<outputFormat>all</outputFormat>
-					<outputName>bom</outputName>
-					<outputDirectory>${project.build.directory}</outputDirectory><!-- usually target, if not redefined in pom.xml -->
-					<verbose>false</verbose><!-- = ${cyclonedx.verbose} -->
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
-
-	<profiles>
-	<profile>
-		<id>genReach</id>
-		<build>
-		<plugins>
-			 <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>exec-maven-plugin</artifactId>
-        <version>3.6.3</version>
-        <executions>
-          <execution>
-			<phase>package</phase>
-            <goals>
-              <goal>exec</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <executable>java</executable>
-          <!-- optional -->
-          <workingDirectory>${project.basedir}</workingDirectory>
-          <arguments>
-            <argument>-agentlib:native-image-agent=config-output-dir=src/main/resources/META-INF/${project.groupId}/${project.artifactId}</argument>
-            <argument>-jar</argument>
-			<argument>${project.build.directory}/${project.artifactId}-${project.version}.jar</argument>
-          </arguments>
-          <environmentVariables>
-            <LANG>en_US</LANG>
-          </environmentVariables>
-        </configuration>
-      </plugin>
-		</plugins>
-		</build>
-	</profile>
-		 <profile>
-     <id>native</id>
-     <build>
-       <plugins>
-		   <plugin>
-			   <groupId>org.springframework.boot</groupId>
-			   <artifactId>spring-boot-maven-plugin</artifactId>
-			   <configuration>
-				   <mainClass>com.petstore.OpenApiGeneratorApplication</mainClass>
-			   </configuration>
-		   </plugin>
-	  		<!--<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<goals>
-							<goal>build-image</goal>
-						</goals>
-						<configuration>
-							<mainClass>com.petstore.OpenApiGeneratorApplication</mainClass>
-							<image>
-								
-								<builder>paketobuildpacks/ubi-9-builder:latest</builder>
-								<runImage>paketobuildpacks/run-java-21-ubi9-base:latest</runImage>
-								<name>petstore</name>
-								<tags>v1,latest</tags>
-								<env>
-									<BP_JVM_VERSION>${java.version}</BP_JVM_VERSION>
-									<BP_NATIVE_IMAGE>true</BP_NATIVE_IMAGE>
-									<BP_NATIVE_IMAGE_BUILD_ARGUMENTS>-verbose</BP_NATIVE_IMAGE_BUILD_ARGUMENTS>
-								</env>
-							</image>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin> -->
-        <plugin>
-            <groupId>org.graalvm.buildtools</groupId>
-			<artifactId>native-maven-plugin</artifactId>
-          
-		  	<configuration>
-				<imageName>petstore</imageName>
-			</configuration>
-		  
-           <executions>
-
-            
-             <execution>
-             <id>build-native</id>
-               <goals>
-                 <goal>compile-no-fork</goal>
-               </goals>
-               <phase>package</phase>
-             </execution>
-           </executions>
-         </plugin> 
-		 <!-- <plugin>
-			<artifactId>maven-assembly-plugin</artifactId>
-			<version>3.8.0</version>
-			<configuration>
-			<descriptors>
-				<descriptor>src/assembly/native-image-files.xml</descriptor>
-			</descriptors>
-			</configuration>
-			<executions>
-				<execution>
-					<id>make-assembly</id> 
-					<phase>package</phase> 
-					<goals>
-						<goal>single</goal>
-					</goals>
-				</execution>
-			</executions>
-		</plugin> -->
-       </plugins>
-     </build>
-   </profile>
-	</profiles>
+	<modules>
+		<module>config-server</module>
+		<module>server</module>
+		<module>spec</module>
+	</modules>
 </project>
